fix large icons positions on navbar on small devices

--- a/src/app/scss/_base.scss
+++ b/src/app/scss/_base.scss
@@ -83,6 +83,11 @@ app, .app {
       position: relative;
       z-index: 1;
     }
+
+    .navbar-nav .fa {
+      font-size: 1.5rem;
+      vertical-align: -5%;
+    }
   }
 
   .avatar{
